--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -139,10 +139,10 @@
   <data name="C6" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\C6.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="C7jpg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="C7" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\C7jpg.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="C8jpg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="C8" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\C8jpg.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="C9" type="System.Resources.ResXFileRef, System.Windows.Forms">
